# vars-localize

./: .gitignore  README.md  environment.yml  environment_windows.yml  pyproject.toml  requirements.txt  run.sh  vars-localize.py
.github/workflows/: cicd.yaml
cache/: token.json
config/: config.ini  strength_map.json
requests/: imaged_moments_query.sql
resources/: resources.qrc
src/main/python/: main.py
src/main/python/ui/: AppWindow.py  BoundingBox.py  ConceptSearchbar.py  DisplayPanel.py  EntryTree.py  ImageView.py  Paginator.py  PropertiesForm.py  SearchPanel.py  __init__.py
src/main/python/util/: query.py  requests.py  utils.py
src/main/resources/base/config/: config.ini
src/vars_localize/ui/: AppWindow.py
ui/: AppWindow.py  BoundingBox.py  ConceptEntry.py  ConceptSearchbar.py  DisplayPanel.py  EntryTree.py  ImageView.py  JSONTree.py  LoginDialog.py  Paginator.py  PropertiesDialog.py  PropertiesForm.py  SearchPanel.py  __init__.py
util/: endpoints.py  m3.py  requests.py  utils.py
vars_localize/lib/: constants.py  endpoints.py  m3.py  resources.py  utils.py
vars_localize/scripts/: run.py
vars_localize/ui/: AppWindow.py  BoundingBox.py  ConceptEntry.py  ConceptSearchbar.py  DisplayPanel.py  EntryTree.py  ImageView.py  JSONTree.py  LoginDialog.py  Paginator.py  PropertiesDialog.py  PropertiesForm.py  SearchPanel.py
