[tool.poetry]
name = "vars-localize"
version = "0.1.0"
description = "VARS Localize is a tool for creating and editing bounding box localizations for VARS annotations."
readme = "README.md"
authors = ["Kevin Barnard <kbarnard@mbari.org>"]
license = "MIT"

[tool.poetry.scripts]
vars-localize = "vars_localize.scripts.run:main"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15"
requests = "^2.27.1"
QDarkStyle = "^3.0.3"

[tool.poetry.dev-dependencies]
pyqt5-stubs = "^5.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
